--- a/views/partials/burguer/burguer-block.handlebars
+++ b/views/partials/burguer/burguer-block.handlebars
@@ -1,5 +1,5 @@
 <li>
-	{{name}}
+	{{burger_name}}
 
 	<button class="devour" data-id="{{id}}" data-devour="{{devour}}">
 		{{#if burger}}submit{{else}}devour!{{/if}}
